--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.3",
     "apollo-server-express": "^2.17.0",
+    "bcryptjs": "^2.4.3",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.2.1",
     "pg": "^8.3.3",
@@ -40,6 +41,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.3",
     "@types/graphql": "^14.5.0",
     "@types/jest": "26.0.10",
