--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^7.1.3",
     "apollo-server-express": "^2.17.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
