--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "typeorm": "ts-node ./node_modules/typeorm/cli.js --config src/config/database.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
+    "@nestjs/common": "^7.6.13",
+    "@nestjs/core": "^7.6.13",
     "@nestjs/graphql": "^7.6.0",
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/platform-socket.io": "^7.6.13",
     "@nestjs/typeorm": "^7.1.3",
+    "@nestjs/websockets": "^7.6.13",
     "apollo-server-express": "^2.17.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
@@ -58,6 +60,7 @@
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
+    "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
