--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "typeorm": "^0.2.26"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.11",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
